# chief-wiggum

./: .gitignore  CLAUDE.md  COST_TRACKING.md  KanbanSpecification.md  README.md  install-symlink.sh  install.sh  mix.exs  test_resource_tracker.sh
v1/lib/orchestrator-py/: .gitignore  bash-bridge.sh  pyproject.toml
v1/lib/orchestrator-py/tests/: test_circuit_breaker.py  test_config.py  test_logging_bridge.py  test_scheduler.py  test_service_state.py  test_worker_pool.py
v1/lib/orchestrator-py/wiggum_orchestrator/: __init__.py  __main__.py  circuit_breaker.py  config.py  logging_bridge.py  main.py  service_executor.py  service_scheduler.py  service_state.py  worker_pool.py
v1/tui/: .gitignore  pyproject.toml
v1/tui/tests/: __init__.py  conftest.py  test_app.py  test_conversation_parser.py  test_kanban_parser.py  test_log_reader.py  test_metrics_reader.py  test_models.py  test_utils.py  test_worker_scanner.py
v1/tui/wiggum_tui/: __init__.py  __main__.py  app.py  messages.py  utils.py
v1/tui/wiggum_tui/actions/: __init__.py  worker_control.py
v1/tui/wiggum_tui/data/: __init__.py  conversation_parser.py  kanban_parser.py  log_reader.py  memory_reader.py  metrics_reader.py  models.py  status_reader.py  watcher.py  worker_scanner.py  worker_status_service.py
v1/tui/wiggum_tui/screens/: __init__.py
v1/tui/wiggum_tui/themes/: __init__.py  htop.py
v1/tui/wiggum_tui/widgets/: __init__.py  conversation_panel.py  filter_sort_bar.py  footer.py  header.py  kanban_panel.py  logs_panel.py  memory_panel.py  metrics_panel.py  plan_panel.py  workers_panel.py
(+612 files in other folders)
